# CSCI390SJ

./: .gitignore  1893_data.txt  1893_final.csv  1894_data.txt  1894_final.csv  DuBois Challenge.twb  Final Presentation.ipynb  ML5Assign_Nashville_Housing_ML.ipynb  ML6Assign_KNN_DecisionTrees.ipynb  ML7Assign_ML_Regression.ipynb  Notebook.ipynb  Untitled.ipynb  Wiki Scraper.ipynb  clean_data_final_presentation.csv  final_data.csv  pyproject.toml  script.py  wiki_1900-1909.csv
The Red Record/: Notebook.ipynb  Wiki_lynchings.csv  data.csv  data.txt  data_2.txt  script.py  script_2.py  webcrawler.ipynb
The Red Record/1894/: 1894_by_month.csv  1894_by_month.txt  1894_by_states.csv  1894_by_states.txt
