[tool.poetry]
name = "csci390sj"
version = "0.1.0"
description = ""
authors = ["sovitpy <sovitlekhak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
